[fix]: repair missing imports and non-existent Kafka API calls;
Clears the remaining compile errors from the enhanced port. The tree now
builds clean on both Java 17 and Java 26.

Missing imports:
  - Fluid: ConsumerConfig, ConsumerRecord, TimeUnit
  - PartitionStrategy: java.lang.annotation.* (as explicit imports)
  - KafkaConfig: java.util.Map

API calls that did not exist:

  - `consumer.config()` (AdvancedKafkaConsumer) — KafkaConsumer exposes no
    accessor for its own settings. Consumers are now held as a
    `ManagedConsumer` record pairing the client with the resolved
    Properties it was built from, so the auto-commit setting is read from
    the configuration rather than queried back off the client.

  - `@FunctionalInterface` on `ManualOffsetHandler` — it declares two
    abstract methods and cannot be a lambda. Annotation dropped and the
    javadoc corrected; the shape is intentional, so the interface stands.

  - `TopicDescription.configs()` (TopicManager) — topic configuration is
    not carried on the description. Replaced with `describeConfigs` over a
    `ConfigResource`.

  - `TopicConfigResource` (TopicManager) — not a Kafka type. Replaced with
    `ConfigResource`, and the deprecated `alterConfigs` with
    `incrementalAlterConfigs`.

Also fixed:

  - `AdvancedKafkaProducer.sendBatch` bound `message` to the `partition`
    parameter by selecting the wrong overload; the four-argument form is
    (topic, key, message, partition). Now calls the explicit
    bootstrap-servers form with no partition preference, and the unchecked
    generic array is replaced with a List, clearing the last warning.

  - `serialVersionUID` added to KafkaProductionException.

Errors: 23 -> 0. Port total: 47 -> 0.

The one warning left under Java 26 is `new URL(String)` in
DependencyDownloader, which predates this port and is tracked separately.

Closes #14

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>